force-app/src/objects/TR1__LK_IntegrationRecord__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Integration_Status__c</fullName>
        <label>Integration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LKMemberId__c</fullName>
        <label>LKMemberId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LKSeatId__c</fullName>
        <externalId>true</externalId>
        <label>LKSeatId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LK_Task_Id__c</fullName>
        <label>LK Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__StageDateTime__c</fullName>
        <label>StageDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__StatusDescription__c</fullName>
        <label>Status Description</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__TR_RecordId__c</fullName>
        <externalId>true</externalId>
        <label>TR RecordId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__TR_RelatedRecordId__c</fullName>
        <description>18 digit id for related record</description>
        <label>TR_RelatedRecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated)LK_IntegrationRecord</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__LK_Task_Id__c</columns>
        <columns>TR1__StatusDescription__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TR1__Email__c</columns>
        <columns>TR1__LKMemberId__c</columns>
        <columns>TR1__LKSeatId__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All_DATA</fullName>
        <columns>NAME</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <columns>TR1__StatusDescription__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DATA</label>
    </listViews>
    <listViews>
        <fullName>TR1__StageRecords</fullName>
        <columns>NAME</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <columns>TR1__StageDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Stage</value>
        </filters>
        <label>StageRecords</label>
    </listViews>
    <listViews>
        <fullName>TR1__SyncApplication</fullName>
        <columns>NAME</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__StatusDescription__c</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>TR1__StageDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Application</value>
        </filters>
        <label>SyncApplication</label>
    </listViews>
    <listViews>
        <fullName>TR1__SyncCandidates</fullName>
        <columns>NAME</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__StatusDescription__c</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>SyncCandidates</value>
        </filters>
        <label>SyncCandidates</label>
    </listViews>
    <listViews>
        <fullName>TR1__SyncJob</fullName>
        <columns>NAME</columns>
        <columns>TR1__Integration_Status__c</columns>
        <columns>TR1__StatusDescription__c</columns>
        <columns>TR1__TR_RelatedRecordId__c</columns>
        <columns>TR1__TR_RecordId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Job</value>
        </filters>
        <label>SyncJob</label>
    </listViews>
    <nameField>
        <label>LK_IntegrationRecords Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LK_IntegrationRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>